manpages-fr-extra (20080316) unstable; urgency=low

  [ Thomas Huriaux ]
  * Sync with packages in unstable
  * debian/control: add Vcs information
  * Update coreutils, grep, util-linux
  * Install manpages in utf-8
  * Fix incorrect font handlers (Closes: #470349)

  [ Nicolas FRANCOIS (Nekral) ]
  * debian/control: set myself as Maintainer, and Thomas as one of the
    Uploaders.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Fri, 25 Apr 2008 23:59:50 +0200

manpages-fr-extra (20071229) unstable; urgency=low

  [ Thomas Huriaux ]
  * Sync with packages in unstable
  * Update procps, coreutils, nfs-utils, tar
  * Bump Standards-Version (no changes needed)

  [ Florentin Duneau ]
  * Update glibc

 -- Thomas Huriaux <thomas.huriaux@gmail.com>  Sat, 29 Dec 2007 11:58:41 +0100

manpages-fr-extra (20071013) unstable; urgency=low

  [ Thomas Huriaux ]
  * Sync with packages in unstable

  [ Nicolas François ]
  * Add translations of cytune.8, pg.1, script.1, scriptreplay.1 and
    getty.8 (incomplete) to util-linux.
  * Add existing translations from Michel Quercia and Christophe Sauthier:
    cal.1, col.1, and tailf.1 to util-linux.

  [Sylvain Cherrier ]
  * Update findutils

 -- Thomas Huriaux <thomas.huriaux@gmail.com>  Sat, 13 Oct 2007 11:32:06 +0200

manpages-fr-extra (20070901) unstable; urgency=low

  [ Thomas Huriaux ]
  * Sync with packages in unstable

  [ Nicolas François ]
  * Add --previous to the po4a calls. po4a 0.31 is sufficient.

  [ Sylvain Cherrier ]
  * Update nfs-utils

 -- Thomas Huriaux <thomas.huriaux@gmail.com>  Sat, 01 Sep 2007 11:39:38 +0200

manpages-fr-extra (20070714) unstable; urgency=low

  [ Thomas Huriaux ]
  * Sync with packages in unstable
  * Fix "fixed-width" translation in bash.1 (Closes: #427673)
  * Use po4a 0.31
  * Use unknown_macros for exportfs.5
  * Fix glibc configuration file

  [ Nicolas François ]
  * util-linux: Add translation of getopt.1
