@@ -10,6 +10,7 @@ manpages-fr-extra (20080316) unstable; urgency=low
   [ Nicolas FRANCOIS (Nekral) ]
   * debian/control: set myself as Maintainer, and Thomas as one of the
     Uploaders.
+  * Makefile: Make sure the build fails if a command fails.
 
  -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Fri, 25 Apr 2008 23:59:50 +0200
 
